added notifcation service integration

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ JWT_SECRET='fucswhefuiwhefefwueguwla;w-wwefwefhwuihwgwegwhefuhwesdccauiosfhweuif
 JWT_COOKIE_EXPIRES_IN=100
 JWT_EXPIRES_IN='100d'
 TZ='GMT'
+REDDIS_PASSWORD='pxVxdTRbl0l2Pg4jf6KPQmzQT4PdPavN'
+REDDIS_HOST="redis-15429.c8.us-east-1-2.ec2.redns.redis-cloud.com"
